# rust3d

./: Cargo.toml  LICENSE
.github/workflows/: build.yaml
src/: common.rs  fps_manager.rs  main.rs  shader.rs  texture_loader.rs  vertex.rs
src/shader/: Basic.frag  Basic.vert
