[package]
name = "rust3d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18.0"
c_str_macro = "1.0.3"

gl = "0.14.0"
sdl2 = "0.35.2"

imgui = "0.8.2"
imgui-sdl2 = "0.15.0"
imgui-opengl-renderer = "0.11.1"
